[tool.poetry]
name = "langgraphbot"
version = "0.1.0"
description = ""
authors = ["kinp <CheukKin.Poon@lendscape.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
black = "^24.4.2"
isort = "^5.13.2"
langchain = "^0.2.6"
langchain-openai = "^0.1.14"
langgraph = "^0.1.5"
huggingface-hub = "^0.23.4"
langchain-huggingface = "^0.0.3"
grandalf = "^0.8"
langchain-community = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
