[tool.poetry]
name = "langgraphbot"
version = "0.1.0"
description = ""
authors = ["kinp <ckpoon19890129@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]  

[tool.poetry.dependencies]
python = "^3.12.4"
python-dotenv = "^1.0.1"
black = "^24.4.2"
isort = "^5.13.2"
langchain = "^0.2.6"
langchain-openai = "^0.1.14"
langgraph = "^0.1.5"
huggingface-hub = "^0.23.4"
langchain-huggingface = "^0.0.3"
grandalf = "^0.8"
langchain-community = "^0.2.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["**/tests"]
pythonpath = ["."]
